--- a/code/scala/pbt_project.yml
+++ b/code/scala/pbt_project.yml
@@ -47,6 +47,17 @@ pipelines:
       inputs: []
       outputs: []
     dependencies: {}
+  pipelines/W1:
+    name: W1
+    description: Really solid info
+    author: oren.legros@gmail.com
+    mode: batch
+    language: scala
+    createdAt: '2022-05-02 16:21:17'
+    datasets:
+      inputs: []
+      outputs: []
+    dependencies: {}
   workflows/Mary_Rath_MD:
     name: Mary_Rath_MD
     description: ''
@@ -81,7 +92,24 @@ pipelines:
       outputs: []
     dependencies: {}
 datasets: {}
-jobs: {}
+jobs:
+  jobs/Winford_ParisianWill_WynnShakita_Barton:
+    name: Winford_ParisianWill_WynnShakita_Barton
+    description: Really solid info
+    fabricUID: null
+    scheduler: null
+    jobSize: null
+    scheduleCron: null
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines: []
+    enabled: null
+    createdAt: '2022-05-02 16:21:17'
+    author: oren.legros@gmail.com
 libraries: []
 dependencies: '[]'
 template: '[]'
